# multimodal-story-generation-T5-LoRA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Multimodal_Story_Generation.ipynb .ipynb  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: default.yaml
docs/: architecture.md  development.md  setup.md
examples/: generate_story.py
src/multimodal_story_generation/: __init__.py  data.py  evaluation.py  pipeline.py  prompts.py  training.py  visualization.py
tests/: test_evaluation.py  test_pipeline.py
