[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multimodal-story-generation"
version = "0.1.0"
description = "Generate narrative stories from images using T5 + LoRA fine-tuning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Muhammad Nouman Hanif"},
    {name = "Muhammad Sabeel Ahmed"},
]
keywords = ["multimodal", "story-generation", "t5", "lora", "blip", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/mnoumanhanif/multimodal-story-generation-T5-LoRA"
Repository = "https://github.com/mnoumanhanif/multimodal-story-generation-T5-LoRA"
Issues = "https://github.com/mnoumanhanif/multimodal-story-generation-T5-LoRA/issues"

[tool.setuptools.packages.find]
where = ["src"]
